<resources>
    <string name="app_name">Qaema ECR</string>
    <string name="profile_Title">Profile</string>
    <string name="email_Title">Email</string>
    <string name="mobile_Title">Mobile</string>
    <string name="app_Settings_Title">App Settings</string>
    <string name="language_Title">Language</string>
    <string name="need_Help_Text">Need Help</string>
    <string name="contact_Us_Text">Contact us on</string>
    <string name="logout_Text">Logout</string>
</resources>